--- a/maitri/Complaint-Management-PHP-main/style/complaints.css
+++ b/maitri/Complaint-Management-PHP-main/style/complaints.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Young+Serif&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Young+Serif&display=swap");
 /* DEFAULT VALUES */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100&family=Questrial&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100&family=Questrial&display=swap");
 
 *,
 *::before,
@@ -12,7 +12,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   min-height: 100dvh;
 }
 
@@ -23,129 +23,134 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #fff;
-	min-height: 100dvh;
-	overflow: hidden;
-	position: relative;
+  min-height: 100dvh;
+  overflow: hidden;
+  position: relative;
 }
 
 .blob-container {
-	min-height: 100vh;
-	overflow: hidden;
-	position:absolute;
-	width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
   filter: blur(5px);
 }
 
 .blob {
   border-radius: 50%;
-	opacity: 0.8;
-	position: absolute;
+  opacity: 0.8;
+  position: absolute;
 }
 
-.blob.one{
-	background: #ccf6c8;
-	height: 200px;
-	width: 200px;
-	left: 10px;
-	top: 10px;
-	animation: movement_two 18s ease-in-out infinite both;
+.blob.one {
+  background: #ccf6c8;
+  height: 200px;
+  width: 200px;
+  left: 10px;
+  top: 10px;
+  animation: movement_two 18s ease-in-out infinite both;
 }
 
-.blob.two{
-	background: #e8d5fd;
-	height: 200px;
-	width: 200px;
-	left: 1000px;
-	top: 30px;
-	animation: movement_two 21s ease-in-out infinite both;
+.blob.two {
+  background: #e8d5fd;
+  height: 200px;
+  width: 200px;
+  left: 1000px;
+  top: 30px;
+  animation: movement_two 21s ease-in-out infinite both;
 }
 
-.blob.three{
-	background: #bce1f1;
-	height: 160px;
-	width: 160px;
-	left: 500px;
-	top: 60px;
-	animation: movement_one 12s ease-in-out infinite both;
+.blob.three {
+  background: #bce1f1;
+  height: 160px;
+  width: 160px;
+  left: 500px;
+  top: 60px;
+  animation: movement_one 12s ease-in-out infinite both;
 }
 
-.blob.four{
-	background: #cdefe7;
-	height: 120px;
-	width: 120px;
-	left: 480px;
-	top: 250px;
-	animation: movement_one 16s ease-in-out infinite both;
+.blob.four {
+  background: #cdefe7;
+  height: 120px;
+  width: 120px;
+  left: 480px;
+  top: 250px;
+  animation: movement_one 16s ease-in-out infinite both;
 }
 
-.blob.five{
-	background: #ffcef5;
-	height: 100px;
-	width: 100px;
-	left: 150px;
-	top: 400px;
-	animation: movement_two 7s ease-in-out infinite both;
+.blob.five {
+  background: #ffcef5;
+  height: 100px;
+  width: 100px;
+  left: 150px;
+  top: 400px;
+  animation: movement_two 7s ease-in-out infinite both;
 }
 
-.blob.six{
-	background: #e8d5fd;
-	height: 130px;
-	width: 130px;
-	left: 400px;
-	top: 400px;
-	animation: movement_two 12s ease-in-out infinite both;
+.blob.six {
+  background: #e8d5fd;
+  height: 130px;
+  width: 130px;
+  left: 400px;
+  top: 400px;
+  animation: movement_two 12s ease-in-out infinite both;
 }
 
-.blob.seven{
-	background: #ffe083;
-	height: 130px;
-	width: 130px;
-	left: 280px;
-	top: 90px;
-	animation: movement_two 13s ease-in-out infinite both;
+.blob.seven {
+  background: #ffe083;
+  height: 130px;
+  width: 130px;
+  left: 280px;
+  top: 90px;
+  animation: movement_two 13s ease-in-out infinite both;
 }
 
-.blob.eight{
-	background: #fdffbc;
-	height: 130px;
-	width: 130px;
-	left: 700px;
-	top: 400px;
-	animation: movement_two 16s ease-in-out infinite both;
+.blob.eight {
+  background: #fdffbc;
+  height: 130px;
+  width: 130px;
+  left: 700px;
+  top: 400px;
+  animation: movement_two 16s ease-in-out infinite both;
 }
 
-.blob.nine{
-	background: #fdcedf;
-	height: 160px;
-	width: 160px;
-	left: 750px;
-	top: 20px;
-	animation: movement_two 10s ease-in-out infinite both;
+.blob.nine {
+  background: #fdcedf;
+  height: 160px;
+  width: 160px;
+  left: 750px;
+  top: 20px;
+  animation: movement_two 10s ease-in-out infinite both;
 }
 
-.blob.ten{
-	background: #cdefe7;
-	height: 120px;
-	width: 120px;
-	left: 920px;
-	top: 400px;
-	animation: movement_one 11s ease-in-out infinite both;
+.blob.ten {
+  background: #cdefe7;
+  height: 120px;
+  width: 120px;
+  left: 920px;
+  top: 400px;
+  animation: movement_one 11s ease-in-out infinite both;
 }
 
-@keyframes movement_one
-{
-    0%,
-  100% { transform: none; }
-   50% { transform: translate(50%, 20%) scale(1); }
+@keyframes movement_one {
+  0%,
+  100% {
+    transform: none;
+  }
+  50% {
+    transform: translate(50%, 20%) scale(1);
+  }
 }
 
-@keyframes movement_two
-{
-    0%,
-  500% { transform: none; }
-   50% { transform: translate(20%, 80%) scale(1.3);}
+@keyframes movement_two {
+  0%,
+  500% {
+    transform: none;
+  }
+  50% {
+    transform: translate(20%, 80%) scale(1.3);
+  }
 }
-
 
 /* CARD */
 
@@ -186,17 +191,15 @@ section {
     height: 3vh;
 } */
 
-
 /* DESCRIPTION */
 .card-child {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
-    align-content: center;
-    align-self: center;
-
-} 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  align-self: center;
+}
 .description {
   display: flex;
   flex-direction: column;
@@ -217,14 +220,12 @@ section {
   text-align: center;
 }
 
-
-
 .description > button:hover {
   background-position: 100% 0;
-  moz-transition: all .4s ease-in-out;
-  -o-transition: all .4s ease-in-out;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 /* TITLE */
@@ -243,7 +244,7 @@ section {
   line-height: 1.3;
   margin: 30px;
   text-align: center;
-  font-family: 'Young Serif', serif;
+  font-family: "Young Serif", serif;
 }
 
 .title > h1 span {
@@ -267,7 +268,7 @@ section {
     gap: 30px;
     padding: 0 0;
   }
-  
+
   .description > p {
     font-size: 0.9rem;
   }
@@ -288,12 +289,12 @@ section {
     gap: 10px;
     padding: 30px 20px 50px;
   }
-  
+
   .description {
     grid-area: description;
     gap: 20px;
   }
-  
+
   .description > p {
     margin-bottom: 8px;
     padding: 0 20px;
@@ -304,197 +305,196 @@ section {
     height: 50px;
     margin-bottom: 20px;
   }
-  
-   .title {
+
+  .title {
     grid-area: title;
   }
-  
+
   .title > h1 {
     margin: 0;
-   }
+  }
 }
 
 /* LOGIN FORM */
 
 .login-form {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.6);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 20px;
-  }
-  
-  .login-form h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #5000ca;
-    margin-bottom: 20px;
-  }
-  
-  .login-form label {
-    font-size: 1rem;
-    font-weight: 400;
-    color: #6b7280;
-    margin-bottom: 5px;
-  }
-  
-  .login-form input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .login-form button {
-    width: 200px;
-    height: 45px;
-    font-family: inherit;
-    font-size: 1.1rem;
-    font-weight: 500;
-    color: #fff;
-    cursor: pointer;
-    margin-bottom: 50px;
-    text-align: center;
-    border: none;
-    background-size: 300% 100%;
-    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
-    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
-    border-radius: 50px;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .login-form button:hover {
-    background-position: 100% 0;
-  }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px;
+}
 
-  .user-title {
-    font-family: 'DM Sans', sans-serif;
-    font-family: 'Questrial', sans-serif;
-    color: #5000ca;
-    text-align: center;
-    font-weight: 600;
-    font-size: 5vh;
-  }
+.login-form h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #5000ca;
+  margin-bottom: 20px;
+}
 
+.login-form label {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #6b7280;
+  margin-bottom: 5px;
+}
 
-  /* This code will create a transparent container with a login form on the right and the big text on the left within the container. You can style the login form further as needed. */
-  
-  
-  
-  
-  /* table css */
-  
-  table { 
+.login-form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
-	width: 70vw; 
-	border-collapse: collapse; 
-	margin:50px auto;
-	}
+.login-form button {
+  width: 200px;
+  height: 45px;
+  font-family: inherit;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 50px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  background-image: linear-gradient(
+    to right,
+    #25aae1,
+    #40e495,
+    #30dd8a,
+    #2bb673
+  );
+  box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+  border-radius: 50px;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.login-form button:hover {
+  background-position: 100% 0;
+}
+
+.user-title {
+  font-family: "DM Sans", sans-serif;
+  font-family: "Questrial", sans-serif;
+  color: #5000ca;
+  text-align: center;
+  font-weight: 600;
+  font-size: 5vh;
+}
+
+/* This code will create a transparent container with a login form on the right and the big text on the left within the container. You can style the login form further as needed. */
+
+/* table css */
+
+table {
+  width: 70vw;
+  border-collapse: collapse;
+  margin: 50px auto;
+}
 
 /* Zebra striping */
-tr:nth-of-type(odd) { 
-	background: #eee; 
-	}
+tr:nth-of-type(odd) {
+  background: #eee;
+}
 
-
-  table {
-  }
-  th { 
+table {
+}
+th {
   /* border-radius: 20px; */
-	background: #5000ca; 
-	color: white; 
-	font-weight: bold; 
+  background: #5000ca;
+  color: white;
+  font-weight: bold;
   /* border-radius: 10px; */
 }
 
-td, th { 
+td,
+th {
   border-style: none;
-	padding: 10px; 
-	/* border: 1px solid #ccc;  */
-	text-align: left; 
-	font-size: 18px;
-	}
+  padding: 10px;
+  /* border: 1px solid #ccc;  */
+  text-align: left;
+  font-size: 18px;
+}
 
 /* 
 Max width before this PARTICULAR table gets nasty
 This query will take effect for any screen smaller than 760px
 and also iPads specifically.
 */
-@media 
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {
+@media only screen and (max-width: 760px),
+  (min-device-width: 768px) and (max-device-width: 1024px) {
+  table {
+    width: 100%;
+  }
 
-	table { 
-	  	width: 100%; 
-	}
+  /* Force table to not be like tables anymore */
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+  }
 
-	/* Force table to not be like tables anymore */
-	table, thead, tbody, th, td, tr { 
-		display: block; 
-	}
-	
-	/* Hide table headers (but not display: none;, for accessibility) */
-	thead tr { 
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
-	
-	tr { border: 1px solid #ccc; }
-	
-	td { 
-		/* Behave  like a "row" */
-		border: none;
-		border-bottom: 1px solid #eee; 
-		position: relative;
-		padding-left: 50%; 
-	}
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
 
-	td:before { 
-		/* Now like a table header */
-		position: absolute;
-		/* Top/left values mimic padding */
-		top: 6px;
-		left: 6px;
-		width: 45%; 
-		padding-right: 10px; 
-		white-space: nowrap;
-		/* Label the data */
-		content: attr(data-column);
+  tr {
+    border: 1px solid #ccc;
+  }
 
-		color: #000;
-		font-weight: bold;
-	}
+  td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+  }
 
+  td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    /* Label the data */
+    content: attr(data-column);
+
+    color: #000;
+    font-weight: bold;
+  }
 }
 
-
-
-
 /* button */
-
-
 
 .solveStatus {
   /* color: red; */
   font-weight: 600;
 }
 
-
 .solveBtn {
   text-align: center;
   width: 140px;
   height: 45px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 11px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
@@ -507,7 +507,7 @@ only screen and (max-width: 760px),
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-  }
+}
 
 .solveBtn:hover {
   background-color: #5000ca;
@@ -517,7 +517,7 @@ only screen and (max-width: 760px),
 }
 
 .complaints-header {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #5000ca;
@@ -540,7 +540,6 @@ only screen and (max-width: 760px),
   color: #000 !important;
 }
 
-  
 input {
   width: 100%;
   padding: 10px;
@@ -548,7 +547,6 @@ input {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
 
 /* model styling */
 
@@ -561,12 +559,12 @@ input {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   -webkit-animation-name: fadeIn; /* Fade in the background */
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 
 /* Modal Content */
@@ -574,11 +572,11 @@ input {
   position: fixed;
   background-color: #fefefe;
   width: 60%;
-  margin:10% 20%;
+  margin: 10% 20%;
   -webkit-animation-name: slideIn;
   -webkit-animation-duration: 0.4s;
   animation-name: slideIn;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 
 /* The Close Button */
@@ -602,18 +600,18 @@ input {
   color: white;
 }
 
-.modal-body {padding: 2px 16px;
+.modal-body {
+  padding: 2px 16px;
   line-height: 3rem;
   max-height: calc(100vh - 200px);
-    overflow-y: auto;
-    text-align: center;
+  overflow-y: auto;
+  text-align: center;
 }
-.modalHr{
-
-  border:5px dotted #3f0399;
-    border-bottom:0;
-    width: 7%;
-    margin: 5px auto 5px auto;
+.modalHr {
+  border: 5px dotted #3f0399;
+  border-bottom: 0;
+  width: 7%;
+  margin: 5px auto 5px auto;
 }
 .modal-footer {
   padding: 2px 16px;
@@ -621,23 +619,115 @@ input {
   color: white;
 }
 
+/* Dropdown button */
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Container styles */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Other styles for your elements (customize as needed) */
+.userProfile {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.user-title {
+  font-size: 24px;
+}
+.complaints-header {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.solveBtn {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
 /* Add Animation */
 @-webkit-keyframes slideIn {
-  from {bottom: -300px; opacity: 0} 
-  to {bottom: 0; opacity: 1}
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
 }
 
 @keyframes slideIn {
-  from {bottom: -300px; opacity: 0}
-  to {bottom:0 ; opacity: 1}
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes fadeIn {
-  from {opacity: 0} 
-  to {opacity: 1}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeIn {
-  from {opacity: 0} 
-  to {opacity: 1}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
